Images added of for CTA

--- a/index.html
+++ b/index.html
@@ -377,14 +377,41 @@ asked questions
       <!-- CTA -->
 
       <div class="cta">
-        <div><h1>Discover a better way to manage spendings</h1>
-        <button>Get Started Now</button></div>
+        <div class="getStarted"><h1>Discover a better way to <br> manage spendings</h1>
+        <button>Get Started Now</button>
+        
+      </div>
+      <img src="/images/cta/Group 268.png" id="img1" alt="">
+      <img src="/images/cta/Group 278.png" id="img2" alt="">
+      <img src="/images/cta/Group 269.png" id="img3" alt="">
+      <img src="/images/cta/Group 277.png" id="img4" alt="">
         <div class="footer">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+          <div><h3>AR Shakir</h3> <p>Finance helps companies manage payments easily.</p></div>
+          <div><ul>
+          <li><h3>Company</h3></li>
+          <li>About Us</li>
+          <li>Carreers</li>
+          <li>Blog</li>
+          <li>Pricing</li></ul>
         </div>
+          <div>
+            <ul><li><h3>Resources</h3></li>
+            <li>Proposal Template</li>
+            <li>Invoice Template</li>
+            <li>Tutorial</li>
+            <li>How to write a contract</li></ul>
+          </div>
+          <div class="footerinput">
+            <h3>Join Our Newsletter</h3>
+            <div><input type="text" placeholder="Your email address"> <button>Subscribe</button></div>
+            <p>*  Will send you weekly updates for your better
+              finance management.</p>
+          </div>
+        </div>
+
+        <img src="./images/cta/Rectangle 97.png" alt="">
+
+        <div class="copyright"><h4>Copyright @ AR Shakir 2022. All Rights Reserved.</h4></div>
 
       </div>
 
