Added Recent blog title

--- a/index.html
+++ b/index.html
@@ -307,6 +307,7 @@
     <!--recent blogs-->
 
     <div class="recentblogs">
+      <h1>Recent Blogs</h1>
       <div class="recentblogdiv1">
         <div class="recentblogdiv1-1">
           <p>Best Practices</p>
