modified the images name

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="valuePropsin1">
         <h3>01</h3>
         <div class="valuePropsImg">
-          <img src="./images/valuepropsimg/Group 3071.png" alt="" />
+          <img src="./images/valuepropsimg/Group3071.png" alt="" />
         </div>
         <h2>Connect wallets & companies</h2>
         <p>
@@ -131,7 +131,7 @@
       <div class="valuePropsin1">
         <h3>02</h3>
         <div class="valuePropsImg">
-          <img src="./images/valuepropsimg/Group 3072.png" alt="" />
+          <img src="./images/valuepropsimg/Group3072.png" alt="" />
         </div>
         <h2>Review <br />transactions</h2>
         <p>
@@ -142,7 +142,7 @@
       <div class="valuePropsin1">
         <h3>03</h3>
         <div class="valuePropsImg">
-          <img src="./images/valuepropsimg/Group 3073.png" alt="" />
+          <img src="./images/valuepropsimg/Group3073.png" alt="" />
         </div>
         <h2>Get income <br />insights</h2>
         <p>
@@ -222,7 +222,7 @@
 
       <div class="featuresMdiv">
         <div class="featuresdiv1">
-          <img src="/images/valuepropsimg/Group 3072.png" alt="" />
+          <img src="/images/valuepropsimg/Group3072.png" alt="" />
           <h3>
             Really boy law county she <br />
             unable her sister
@@ -233,7 +233,7 @@
           </p>
         </div>
         <div class="featuresdiv2">
-          <img src="/images/valuepropsimg/Group 3071.png" alt="" />
+          <img src="/images/valuepropsimg/Group3071.png" alt="" />
           <h3>Among sex are leave law built now</h3>
           <p>
             We so opinion friends me message as delight. Whole front do of plate
