button edited and changed the name of botton classes name

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           heard oh ought. His defective nor convinced residence own.
         </p>
         <div class="secHright">
-          <img src="./images/colon.png" alt="" />
+          <img src="./images/colon.png " id="colon2" alt="" />
           <h4>
             Wise busy past both park when an ye no. Nay likely her length sooner
             thrown sex lively income. The expense windows .
@@ -379,7 +379,7 @@ asked questions
 
       <div class="cta">
         <div class="getStarted"><h1>Discover a better way to <br> manage spendings</h1>
-        <button>Get Started Now</button>
+        <button class="ctabtn">Get Started Now</button>
         
       </div>
       <img src="/images/cta/Group 268.png" id="img1" alt="">
